style/search.css
#cards {
  display: grid;
  grid-template-columns: auto auto;
  grid-gap: 15px;
  width: 70vw;
  padding: 10px;
}

.card {
  background-color: #212121;
  filter: opacity(95%);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-family: "Verdana";
  padding: 10px;
  border-radius: 5px;
  box-shadow: 0px 0px 8px 4px rgba(131, 131, 131, 0.404);
  color: var(--text);
}

.card img {
  max-width: 33vw;
  max-height: 50vh;
  border-radius: 10px;
  margin-bottom: 2vh;
}

#search-bar {
  width: 33vw;
  height: 5vh;
  margin-bottom: 5vh;
  border-radius: 2px;
  border: 1px solid var(--background);
  padding: 10px;
  opacity: 0.8;
}

@media screen and (max-width: 800px) {
  #cards {
    grid-template-columns: auto;
  }
  .card img {
    max-width: 60vw;
    max-height: 80vh;
  }
  #search-bar {
    width: 65vw;
    height: 10vw;
    margin-bottom: 5vh;
  }
}

.card:hover {
  cursor: pointer;
  filter: opacity(100%);
}

#search-bar:hover,
#search-bar:focus {
  outline: none;
  opacity: 1;
}

